# artifice

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
camera_server/: Cargo.toml
camera_server/src/: main.rs
network_camera/: Cargo.toml
network_camera/src/: main.rs
network_microphone/: Cargo.toml
speaker_server/: Cargo.toml
src/: api.rs  lib.rs  main.rs
